fixes status badge location on smaller devices

--- a/src/sass/partials/_badge.scss
+++ b/src/sass/partials/_badge.scss
@@ -57,6 +57,11 @@
   padding: 2px 10px;
   border-radius: 5px;
   letter-spacing: 0.08em;
+
+  @include responsive(767px) {
+    right: 10px;
+    top: 0;
+  }
 }
 .advisory-status.ongoing {
   background-color: red;
